--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
-title: Geração Z - Expectativas Mercado de Trabalho
-description: Site parte do projeto de pesquisa Geração Z: expectativas e desafios na gestão
+title: Geração Z Expectativas Mercado de Trabalho
+description: Site parte do projeto de pesquisa Geração Z expectativas e desafios na gestão
 show_downloads: false
